--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsql-superagent",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "JSQL plugin for Superagent",
   "main": "jsql-superagent.min.js",
   "keywords": [
@@ -18,8 +18,8 @@
     }
   ],
   "dependencies": {
-    "jsql-core": "^1.3.0",
-    "superagent": "latest"
+    "jsql-core": "^1.4.0",
+    "superagent": "5.0.5"
   },
   "scripts": {},
   "devDependencies": {
