--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "jsql-superagent",
-  "version": "0.8.0",
+  "version": "1.5.0",
   "description": "JSQL plugin for Superagent",
   "main": "jsql-superagent.min.js",
-  "typings": "jsql-superagent.d.ts",
   "keywords": [
     "jsql",
     "jsql-it",
@@ -19,7 +18,11 @@
     }
   ],
   "dependencies": {
-    "jsql-core": "^1.8.0",
+    "jsql-core": "^2.1.0",
+    "superagent": "5.0.5"
+  },
+  "peerDependencies": {
+    "jsql-core": "^2.1.0",
     "superagent": "5.0.5"
   },
   "scripts": {},
